--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-    * {
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -21,7 +21,7 @@
         .container {
             width: 100%;
             height: 100vh;
-            background: rgb(161, 24, 24);
+            background: white;
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -75,6 +75,7 @@
             justify-content: center;
             background: white;
             padding: 2vh;
+            height: 200px;
         }
 
         .menu-list {
